figure and figcaption

--- a/topic.html
+++ b/topic.html
@@ -143,7 +143,10 @@
 
             <div class="content_4">
                 <h1>Growth and Future</h1>
-                <a href="#"><img src="imgs/history.jpg" alt="Voice Technology" width="700"></a>
+                <figure>
+                    <a href="#"><img src="imgs/history.jpg" alt="Voice Technology" width="700"></a>
+                    <figcaption>History of Voice Technology</figcaption>
+                </figure>
                 <p>
                     <strong>Voice technology</strong> has come a long way developing to the adaptations of ever changing lifestyles of people. 
                     It was introduced by <em>Thomas Edison</em> into the world and made its first evolution in 1950, when <em>Bell Labs</em> 
@@ -172,7 +175,10 @@
                     These biometric features are used for security reasons and identifying other people. Compared to voice technology, these other biometric 
                     signatures are not able to convey orders and information as effectively as human speech can.
                 </p>
-                <a href="#"><img src="imgs/vt.jpg" alt="" width="700"></a>
+                <figure>
+                    <a href="#"><img src="imgs/vt.jpg" alt="" width="700"></a>
+                    <figcaption>Related technology to Voice Technology</figcaption>
+                </figure>
             </div>
 
         </article>
