--- a/topic.html
+++ b/topic.html
@@ -37,16 +37,25 @@
           </nav>   
         
         <!-- Content Section s-->
+          <!-- sidebar -->
+          <div class="sidebar" id="sidenav">
+              <a href="#purpose" id="p">Purpose</a>
+              <a href="#development" id="d">Development</a>
+              <a href="#management" id="m">Management</a>
+              <a href="#growth" id="g">Growth and Future</a>
+              <a href="#related" id="r">Related Technology</a>
+          </div>
+
         <article>
             
             <div class="content_1"> <!-- Purpose Section -->
-                <h1> Purpose </h1>
+                <h1 id="purpose"> Purpose </h1>
                 <p>
                     <strong>Voice Technology</strong>, also known as <em>Voice Search</em> or <em>Voice Recognition Software</em> are programs 
                     that can recognise and record audible commands of the human language and translate them into code i.e. computer language, 
                     that can interact with other programs.
                 </p>
-                <h3> Uses : </h3>
+                <h2> Uses : </h2>
                 <ul>
                     <li>Transcription and Dictation</li>
                     <li>Voice Assistances</li>
@@ -84,7 +93,7 @@
             </div>
 
             <div class="content_2">
-                <h1> Development </h1>
+                <h1 id="development"> Development </h1>
                 <p>
                     The first inkling of voice technology came about through the efforts of <em>Thomas Edison</em>. He created the 
                     device from a combination of his previous inventions: telephone and telegraph. The thought that he could record 
@@ -103,7 +112,7 @@
             </div>
 
             <div class="content_3">
-                <h1>Management</h1>
+                <h1 id="management">Management</h1>
 	            <p>
 		            It's a competitive and open market. There is no central body which governs voice recognition technology. However, 
                     there are prominent developers and companies that contribute tremendously in the field:
@@ -142,10 +151,10 @@
             </div>
 
             <div class="content_4">
-                <h1>Growth and Future</h1>
+                <h1 id="growth">Growth and Future</h1>
                 <figure>
                     <a href="#"><img src="imgs/history.jpg" alt="Voice Technology" width="700"></a>
-                    <figcaption>History of Voice Technology</figcaption>
+                    <figcaption>History of Voice Technology </figcaption>
                 </figure>
                 <p>
                     <strong>Voice technology</strong> has come a long way developing to the adaptations of ever changing lifestyles of people. 
@@ -168,7 +177,7 @@
             </div>
 
             <div class="content_5">
-                <h1>Related Technology</h1>
+                <h1 id="related">Related Technology</h1>
                 <p>
                     Voice Technology, as part of the biometric technology tree, also possesses its owen sibling technology branches that focuses on recognising 
                     and identifying other human biological features. The biosignature that can be anything from <em>facial features, fingerprints, iris, etc.</em> 
