--- a/topic.html
+++ b/topic.html
@@ -156,24 +156,26 @@
                     <a href="#"><img src="imgs/history.jpg" alt="Voice Technology" width="700"></a>
                     <figcaption>History of Voice Technology </figcaption>
                 </figure>
-                <p>
-                    <strong>Voice technology</strong> has come a long way developing to the adaptations of ever changing lifestyles of people. 
-                    It was introduced by <em>Thomas Edison</em> into the world and made its first evolution in 1950, when <em>Bell Labs</em> 
-                    invented <strong>Voder</strong>, then <strong>Audrey</strong>, an automatic digit recognition machine. This was then enhanced 
-                    overtime with more vocabularies recognised either by speech patterns, fixed templates, or sounds and pitch. It reached a major 
-                    breakthrough in 2010 where <em>Google</em> invented an application called <strong>Google Voice Search</strong>. With this advancement, 
-                    it paved the way for <em>Siri</em> whose success only pushed the voice technology to shoot up. Because of this, companies now created 
-                    their own digital assistants we now widely use in our everyday life such as <em>Siri, Amazon Alexa, Cortana, Google, Bixby</em>, etc. 
-                    Integrations of voice assistants into our daily gadgets i.e. mobile phones, pushed more devices that are used in different settings 
-                    i.e. home, hospitals, schools, cars, businesses, and more. Since more consumers are leaning towards the digital world, indsutries are 
-                    now widely adopting this era, where voice technology benefits businesses' capability to generate revenue, improve efficiency and increase 
-                    productivity. According to the <em>Industry Report: Trends and Predictions for Voice Technology in 2021</em> by Speechmatics, 
-                    68% of respondents currently have voice strategy in place in their company compared with 50% in 2020. Those who doesn't have voice 
-                    strategy, 60% said that it is something they will consider in the next 5 years. With the pandemic <em>COVID-19</em> hitting globally, 
-                    companies are more inclines to shift into voice technology, where many industries like media and entertaiinment, banking, financial services, 
-                    insurance, healthcare and life sciences, education, government, etc have proven that voice technology's capabilities are limitless, and there 
-                    is no stopping it.
-                </p>
+                <aside>
+                    <p>
+                        <strong>Voice technology</strong> has come a long way developing to the adaptations of ever changing lifestyles of people. 
+                        It was introduced by <em>Thomas Edison</em> into the world and made its first evolution in 1950, when <em>Bell Labs</em> 
+                        invented <strong>Voder</strong>, then <strong>Audrey</strong>, an automatic digit recognition machine. This was then enhanced 
+                        overtime with more vocabularies recognised either by speech patterns, fixed templates, or sounds and pitch. It reached a major 
+                        breakthrough in 2010 where <em>Google</em> invented an application called <strong>Google Voice Search</strong>. With this advancement, 
+                        it paved the way for <em>Siri</em> whose success only pushed the voice technology to shoot up. Because of this, companies now created 
+                        their own digital assistants we now widely use in our everyday life such as <em>Siri, Amazon Alexa, Cortana, Google, Bixby</em>, etc. 
+                        Integrations of voice assistants into our daily gadgets i.e. mobile phones, pushed more devices that are used in different settings 
+                        i.e. home, hospitals, schools, cars, businesses, and more. Since more consumers are leaning towards the digital world, indsutries are 
+                        now widely adopting this era, where voice technology benefits businesses' capability to generate revenue, improve efficiency and increase 
+                        productivity. According to the <em>Industry Report: Trends and Predictions for Voice Technology in 2021</em> by Speechmatics, 
+                        68% of respondents currently have voice strategy in place in their company compared with 50% in 2020. Those who doesn't have voice 
+                        strategy, 60% said that it is something they will consider in the next 5 years. With the pandemic <em>COVID-19</em> hitting globally, 
+                        companies are more inclines to shift into voice technology, where many industries like media and entertaiinment, banking, financial services, 
+                        insurance, healthcare and life sciences, education, government, etc have proven that voice technology's capabilities are limitless, and there 
+                        is no stopping it.
+                    </p>
+                </aside>
             </div>
 
             <div class="content_5">
