--- a/topic.html
+++ b/topic.html
@@ -48,7 +48,7 @@
 
         <article>
             
-            <div class="content_1"> <!-- Purpose Section -->
+            <section class="content_1"> <!-- Purpose Section -->
                 <h1 id="purpose"> Purpose </h1>
                 <p>
                     <strong>Voice Technology</strong>, also known as <em>Voice Search</em> or <em>Voice Recognition Software</em> are programs 
@@ -90,9 +90,9 @@
                     </tr>
                     </tbody>
                     </table>
-            </div>
+                </section>
 
-            <div class="content_2">
+            <section class="content_2">
                 <h1 id="development"> Development </h1>
                 <p>
                     The first inkling of voice technology came about through the efforts of <em>Thomas Edison</em>. He created the 
@@ -109,9 +109,9 @@
                     <em>Bell Labs</em>, who created <strong>Audrey</strong>, a program capable of recognising the digits from 0 to 9
                     with 90% accuracy.
                 </p>
-            </div>
+            <section>
 
-            <div class="content_3">
+            <section class="content_3">
                 <h1 id="management">Management</h1>
 	            <p>
 		            It's a competitive and open market. There is no central body which governs voice recognition technology. However, 
@@ -148,9 +148,9 @@
                         </ul>
                     </li>
                 </ul>
-            </div>
+            </section>
 
-            <div class="content_4">
+            <section class="content_4">
                 <h1 id="growth">Growth and Future</h1>
                 <figure>
                     <a href="#"><img src="imgs/history.jpg" alt="Voice Technology" width="700"></a>
@@ -176,9 +176,9 @@
                         is no stopping it.
                     </p>
                 </aside>
-            </div>
+            </section>
 
-            <div class="content_5">
+            <section class="content_5">
                 <h1 id="related">Related Technology</h1>
                 <p>
                     Voice Technology, as part of the biometric technology tree, also possesses its owen sibling technology branches that focuses on recognising 
@@ -190,7 +190,7 @@
                     <a href="#"><img src="imgs/vt.jpg" alt="" width="700"></a>
                     <figcaption>Related technology to Voice Technology</figcaption>
                 </figure>
-            </div>
+            </section>
 
         </article>
 
