--- a/topic.html
+++ b/topic.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="styles/style.css">
         
     </head>
-    <body>
+    <body class="topic_body">
 
         <!-- Navigation Section -->
         <nav class="navbar">
