--- a/topic.html
+++ b/topic.html
@@ -13,12 +13,12 @@
 
         <!-- Navigation Section -->
         <nav class="navbar">
-            <div class="navbar__container">
+            <section class="navbar__container">
               <a href="index.html" id="navbar__logo">Voice Technology</a>
-              <div class="navbar__toggle" id="mobile-menu">
+              <section class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span> <span class="bar"></span>
                 <span class="bar"></span>
-              </div>
+              </section>
               <ul class="navbar__menu">
                 <li class="navbar__item">
                   <a href="index.html" class="navbar__links">Index</a>
@@ -33,18 +33,18 @@
                     <a href="enhancements.html" class="navbar__links">Enhancements</a>
                   </li>
               </ul>
-            </div>
+            </section>
           </nav>   
         
         <!-- Content Section s-->
           <!-- sidebar -->
-          <div class="sidebar" id="sidenav">
+          <section class="sidebar" id="sidenav">
               <a href="#purpose" id="p">Purpose</a>
               <a href="#development" id="d">Development</a>
               <a href="#management" id="m">Management</a>
               <a href="#growth" id="g">Growth and Future</a>
               <a href="#related" id="r">Related Technology</a>
-          </div>
+          </section>
 
         <article>
             
@@ -196,14 +196,14 @@
 
         <!-- Footer Section -->
         <footer class="mainfooter">
-            <div class="f_container">
+            <section class="f_container">
                 <h3> Swinburne University | Assignment 1 &copy </h3>
                 <li><a href="mailto:joycmena@gmail.com"> Joy </a></li>
                 <li><a href="mailto:nelsonhain@gmail.com"> Nelson </a></li>
                 <li><a href="mailto:augiaminh14@gmail.com"> Minh </a></li>
                 <li><a href="mailto:thinhd464@gmail.com"> Tom </a></li>
                 <li><a href="mailto:uzmanshafifassy@gmail.com"> Uzi </a></li>
-            </div>
+            </section>
         </footer>
 
     </body>
