--- a/topic.html
+++ b/topic.html
@@ -12,7 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
         
     </head>
-    <body class="smoothscroll">
+    <body>
 
         <!-- Navigation Section -->
         <nav class="navbar">
@@ -36,24 +36,8 @@
                     <a href="enhancements.html" class="navbar__links">Enhancements</a>
                   </li>
               </ul>
-<<<<<<< HEAD
-            </div>
-          </nav>
-=======
-            </section>
-          </nav>   
-        
-        <!-- Content Section s-->
-          <!-- sidebar -->
-          <section class="sidebar" id="sidenav">
-              <a href="#purpose" id="p">Purpose</a>
-              <a href="#development" id="d">Development</a>
-              <a href="#management" id="m">Management</a>
-              <a href="#growth" id="g">Growth and Future</a>
-              <a href="#related" id="r">Related Technology</a>
-          </section>
->>>>>>> cf9f244758f4907a73c5e4a937b658401a40e469
-
+              </section>
+              </nav>
         <!-- sidebar -->
         <div class="sidebar" id="sidenav">
             <a href="#purpose" id="p">Purpose</a>
