--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
         <!-- Navigation Section -->
         <nav class="navbar">
             <section class="navbar__container">
-              <a href="index.html" id="navbar__logo">Voice Technology</a>
+		    <h2 class="filler_2">1</h2>
+		<a href="index.html" id="navbar__logo">Voice Technology</a>
               <section class="navbar__toggle" id="mobile-menu">
-                <span class="bar"></span> <span class="bar"></span>
+                 <h2 class="filler_2">1</h2>
+		<span class="bar"></span> <span class="bar"></span>
                 <span class="bar"></span>
               </section>
               <ul class="navbar__menu">
@@ -40,9 +42,10 @@
         
         <!-- Content Section s-->
         <section class="container">
-                <img id="index_img" src="imgs/vt1.jpg" alt="voice technologies image 1">
+           <h2 class="filler_2">1</h2>
+		<img id="index_img" src="imgs/vt1.jpg" alt="voice technologies image 1">
             <section class="content">
-				<h1> Voice Technology Assignment </h1>
+				<h2> Voice Technology Assignment </h2>
                 <p>
                     There is a vast difference in today's world of technologies compared to a decade ago. 
                     Adaptations of technology to the human lifestyle has come a long way, specially with <strong>Voice Technology</strong>, 
