--- a/topic.html
+++ b/topic.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>Voice Technology | Topic </title>
@@ -201,12 +201,14 @@
         <!-- Footer Section -->
         <footer class="mainfooter">
             <section class="f_container">
-                <h3> Swinburne University | Assignment 1 &copy </h3>
+                <h3> Swinburne University | Assignment 1 &amp;copy </h3>
+                <ul>
                 <li><a href="mailto:joycmena@gmail.com"> Joy </a></li>
                 <li><a href="mailto:nelsonhain@gmail.com"> Nelson </a></li>
                 <li><a href="mailto:augiaminh14@gmail.com"> Minh </a></li>
                 <li><a href="mailto:thinhd464@gmail.com"> Tom </a></li>
                 <li><a href="mailto:uzmanshafifassy@gmail.com"> Uzi </a></li>
+                </ul>
             </section>
         </footer>
 
