--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>Voice Technology | Home </title>
@@ -58,14 +58,16 @@
 
         <!-- Footer Section -->
         <footer class="mainfooter">
-            <section class="f_container">
+            	<section class="f_container">
                 <h3> Swinburne University | Assignment 1 &copy </h3>
-                <li><a href="mailto:joycmena@gmail.com"> Joy </a></li>
+                <ul>
+		<li><a href="mailto:joycmena@gmail.com"> Joy </a></li>
                 <li><a href="mailto:nelsonhain@gmail.com"> Nelson </a></li>
                 <li><a href="mailto:augiaminh14@gmail.com"> Minh </a></li>
                 <li><a href="mailto:thinhd464@gmail.com"> Tom </a></li>
                 <li><a href="mailto:uzmanshafifassy@gmail.com"> Uzi </a></li>
-            </section>
+		</ul>
+		</section>
         </footer>
 
     </body>
