--- a/enhancements.html
+++ b/enhancements.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>Voice Technology | Enhancement </title>
@@ -17,8 +17,10 @@
         <!-- Navigation Section -->
         <nav class="navbar">
             <section class="navbar__container">
+              <h2 class="filler_2">1</h2>
               <a href="index.html" id="navbar__logo">Voice Technology</a>
               <section class="navbar__toggle" id="mobile-menu">
+                <h2 class="filler_2">1</h2>
                 <span class="bar"></span> <span class="bar"></span>
                 <span class="bar"></span>
               </section>
@@ -45,12 +47,14 @@
         <!-- Footer Section -->
         <footer class="mainfooter">
             <section class="f_container">
+                <ul>
                 <h3> Swinburne University | Assignment 1 &copy </h3>
                 <li><a href="mailto:joycmena@gmail.com"> Joy </a></li>
                 <li><a href="mailto:nelsonhain@gmail.com"> Nelson </a></li>
                 <li><a href="mailto:augiaminh14@gmail.com"> Minh </a></li>
                 <li><a href="mailto:thinhd464@gmail.com"> Tom </a></li>
                 <li><a href="mailto:uzmanshafifassy@gmail.com"> Uzi </a></li>
+                </ul>    
             </section>
         </footer>
 
