--- a/topic.html
+++ b/topic.html
@@ -206,7 +206,7 @@
                 <li><a href="mailto:joycmena@gmail.com"> Joy </a></li>
                 <li><a href="mailto:nelsonhain@gmail.com"> Nelson </a></li>
                 <li><a href="mailto:augiaminh14@gmail.com"> Minh </a></li>
-                <li><a href="mailto:thinhd464@gmail.com"> Tom </a></li>
+                <li><a href="mailto:103177240@student.swin.edu.au"> Tom </a></li>
                 <li><a href="mailto:uzmanshafifassy@gmail.com"> Uzi </a></li>
                 </ul>
             </section>
