--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <ul>
 		<li><a href="mailto:joycmena@gmail.com"> Joy </a></li>
                 <li><a href="mailto:nelsonhain@gmail.com"> Nelson </a></li>
-                <li><a href="mailto:augiaminh14@gmail.com"> Minh </a></li>
+                <li><a href="mailto:103844052@student.swin.edu.au"> Minh </a></li>
                 <li><a href="mailto:thinhd464@gmail.com"> Tom </a></li>
                 <li><a href="mailto:uzmanshafifassy@gmail.com"> Uzi </a></li>
 		</ul>
