--- a/topic.html
+++ b/topic.html
@@ -205,7 +205,7 @@
                 <ul>
                 <li><a href="mailto:joycmena@gmail.com"> Joy </a></li>
                 <li><a href="mailto:nelsonhain@gmail.com"> Nelson </a></li>
-                <li><a href="mailto:augiaminh14@gmail.com"> Minh </a></li>
+                <li><a href="mailto:103844052@student.swin.edu.au"> Minh </a></li>
                 <li><a href="mailto:103177240@student.swin.edu.au"> Tom </a></li>
                 <li><a href="mailto:uzmanshafifassy@gmail.com"> Uzi </a></li>
                 </ul>
