--- a/enhancements.html
+++ b/enhancements.html
@@ -51,7 +51,7 @@
                 <h3> Swinburne University | Assignment 1 &copy </h3>
                 <li><a href="mailto:joycmena@gmail.com"> Joy </a></li>
                 <li><a href="mailto:nelsonhain@gmail.com"> Nelson </a></li>
-                <li><a href="mailto:augiaminh14@gmail.com"> Minh </a></li>
+                <li><a href="mailto:103844052@student.swin.edu.au"> Minh </a></li>
                 <li><a href="mailto:thinhd464@gmail.com"> Tom </a></li>
                 <li><a href="mailto:uzmanshafifassy@gmail.com"> Uzi </a></li>
                 </ul>    
