--- a/index.html
+++ b/index.html
@@ -1,63 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-      <head>
-            <meta charset="utf-8">
-            <meta name="description" content="Voice Technology">
-            <meta name="author" content="Joy, Nelson, Uzman, Tom, Minh">
-            <!-- Viewport set to scale 1.0 -->
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Voice Technology | Home</title>
-            <!-- References to external CSS files-->
-            <link rel="stylesheet" href="/styles/styles.css">
-            <!-- References to external fonts -->
-            <link rel="preconnect" href="https://fonts.googleapis.com"> 
-            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <!-- Sigmar Once font -->
-            <link href="https://fonts.googleapis.com/css2?family=Sigmar+One&display=swap" rel="stylesheet">
-            <!-- Yanone Kaffeesatz font --> 
-            <link href="https://fonts.googleapis.com/css2?family=Sigmar+One&family=Yanone+Kaffeesatz:wght@600&display=swap" rel="stylesheet">
-            <!-- Roboto font-->
-            <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-            <!-- Exo font -->
-            <link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-            <!-- References to external responsive CSS file -->
-            <link rel="stylesheet" href="/styles/responsive.css" media="screen and (max-width: 1024px)">
-      </head>
-      <body id="index_body">
-            <!-- Navigation Section -->
-            <header class="header">
-                  <a href="index.html" class="logo">Voice Technology</a>
-                  <nav class="header-right">
-                        <a href="index.html">Home</a>
-                        <a href="topic.html" >Topic</a>
-                        <a href="quiz.html" >Quiz</a>
-                        <a href="enhancement.html">Enhancement</a>
-                  </nav>
-            </header>
-            <!-- Content -->
-            <article class="index_container">
-                  <h1>What is <br> Voice Technology</h1>
-                  <figure id="index_fig">
-                        <img id="index_img" src="/images/vt1.jpg" alt="voice technology" />
-                        <p>
-                              There is a vast difference in today's world of technologies compared to a decade ago. Adaptations of technology to the human lifestyle has come a long way, specially with <strong>Voice Technology</strong>, with its biggest developments only emerging in the recent years. With voice technology being easily accessible, it has reach more consumers and concerns are inevitable. Despite of this, the potential of voice technology is apparent, and its growth is not stopping anytime soon.
-                        </p>
-                  </figure>
-            </article>
-            <!-- Footer -->
-            <footer>
-                  <article>
-                        <h3 id="footer_h3">Swinburne University of Technology &#169; | Assignment 1 </h3>
-                        <ul id="contacts">
-                              <li id="email_icon">&#9993;</li>
-                              <li><a href="mailto:101934317@student.swin.edu.au"> Joy </a></li>
-                              <li><a href="mailto:nelsonhain@gmail.com"> Nelson </a></li>
-                              <li><a href="mailto:103844052@student.swin.edu.au"> Minh </a></li>
-                              <li><a href="mailto:103177240@student.swin.edu.a"> Tom </a></li>
-                              <li><a href="mailto:uzmanshafifassy@gmail.com"> Uzman </a></li>
-                        </ul>
-                  </article>
-
-            </footer>
-      </body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="Voice Technology">
+    <meta name="author" content="Joy, Nelson, Uzman, Tom, Minh">
+    <!-- Viewport set to scale 1.0 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Voice Technology | Home</title>
+    <!-- References to external CSS files-->
+    <link rel="stylesheet" href="/styles/styles.css">
+    <!-- References to external fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Sigmar Once font -->
+    <link href="https://fonts.googleapis.com/css2?family=Sigmar+One&display=swap" rel="stylesheet">
+    <!-- Yanone Kaffeesatz font --> 
+    <link href="https://fonts.googleapis.com/css2?family=Sigmar+One&family=Yanone+Kaffeesatz:wght@600&display=swap" rel="stylesheet">
+    <!-- Roboto font-->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <!-- Exo font -->
+    <link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!-- References to external responsive CSS file -->
+    <link rel="stylesheet" href="/styles/responsive.css" media="screen and (max-width: 1024px)">    
+  </head>
+  <body id="index_body">
+  <!-- Navigation Section -->
+    <nav class="navbar">
+      <div class="navbar__container">
+        <header>
+          <a href="index.html" id="navbar__logo">Voice Technology</a>
+        </header>
+        <div class="navbar__toggle" id="mobile-menu">
+          <span class="bar"></span> <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+        <ul class="navbar__menu">
+          <li class="navbar__item">
+            <a href="index.html" class="navbar__links">Index</a>
+          </li>
+          <li class="navbar__item">
+            <a href="topic.html" class="navbar__links">Topic</a>
+          </li>
+          <li class="navbar__item">
+            <a href="quiz.html" class="navbar__links">Quiz</a>
+          </li>
+          <li class="navbar__item">
+            <a href="enhancements.html" class="navbar__links">Enhancements</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!-- Content -->
+    <article class="index_container">
+      <h1>What is <br> Voice Technology</h1>
+      <figure id="index_fig">
+        <img id="index_img" src="/images/vt1.jpg" alt="voice technology" />
+          <p>
+            There is a vast difference in today's world of technologies compared to a decade ago. Adaptations of technology to the human lifestyle has come a long way, specially with <strong>Voice Technology</strong>, with its biggest developments only emerging in the recent years. With voice technology being easily accessible, it has reach more consumers and concerns are inevitable. Despite of this, the potential of voice technology is apparent, and its growth is not stopping anytime soon.
+          </p>
+      </figure>
+    </article>
+    <!-- Footer Section -->
+    <footer>
+      <article>
+        <h3 id="footer_h3">Swinburne University of Technology &#169; | Assignment 1 </h3>
+          <ul id="contacts">
+            <li id="email_icon">&#9993;</li>
+            <li><a href="mailto:101934317@student.swin.edu.au"> Joy </a></li>
+            <li><a href="mailto:nelsonhain@gmail.com"> Nelson </a></li>
+            <li><a href="mailto:103844052@student.swin.edu.au"> Minh </a></li>
+            <li><a href="mailto:103177240@student.swin.edu.a"> Tom </a></li>
+            <li><a href="mailto:uzmanshafifassy@gmail.com"> Uzman </a></li>
+          </ul>
+      </article>
+    </footer>
+  </body>
 </html>
