--- a/topic.html
+++ b/topic.html
@@ -30,15 +30,31 @@
 
             <!-- Navigation Section -->
             
-            <header class="header">
-                  <a href="index.html" class="logo">Voice Technology</a>
-                  <nav class="header-right">
-                        <a href="index.html">Home</a>
-                        <a href="topic.html" >Topic</a>
-                        <a href="quiz.html" >Quiz</a>
-                        <a href="enhancement.html">Enhancement</a>
-                  </nav>
-            </header>
+            <nav class="navbar">
+                  <div class="navbar__container">
+                        <header>
+                              <a href="index.html" id="navbar__logo">Voice Technology</a>
+                        </header>
+                        <div class="navbar__toggle" id="mobile-menu">
+                              <span class="bar"></span> <span class="bar"></span>
+                              <span class="bar"></span>
+                        </div>
+                        <ul class="navbar__menu">
+                              <li class="navbar__item">
+                                    <a href="index.html" class="navbar__links">Index</a>
+                              </li>
+                              <li class="navbar__item">
+                                    <a href="topic.html" class="navbar__links">Topic</a>
+                              </li>
+                              <li class="navbar__item">
+                                    <a href="quiz.html" class="navbar__links">Quiz</a>
+                              </li>
+                              <li class="navbar__item">
+                                    <a href="enhancements.html" class="navbar__links">Enhancements</a>
+                              </li>
+                        </ul>
+                  </div>
+            </nav>
 
             <!-- ########## Sidebar Navigation ########## -->
             <div id="sidenav">
