change "index" to "home"

--- a/enhancements.html
+++ b/enhancements.html
@@ -39,7 +39,7 @@
                     </div>
                     <ul class="navbar__menu">
                           <li class="navbar__item">
-                                <a href="index.html" class="navbar__links">Index</a>
+                                <a href="index.html" class="navbar__links">Home</a>
                           </li>
                           <li class="navbar__item">
                                 <a href="topic.html" class="navbar__links">Topic</a>
@@ -55,16 +55,18 @@
         </nav>
             <!-- Content -->
             <section>
-                  <h4>Figure:</h4>
                   <p>
+                        figure: 
                         https://www.w3.org/Style/Examples/007/figures.en.html
-                  </p>
-                  <p>
+
                         zoom on hover 
                         https://www.w3schools.com/howto/howto_css_zoom_hover.asp
 
                         side hoverable navigation buttons
                         https://www.w3schools.com/howto/howto_css_sidenav_buttons.asp
+
+                        responsive design when screen is less then 980px on navigation bar
+
                   </p>                  
             </section>
 
