--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <ul class="navbar__menu">
           <li class="navbar__item">
-            <a href="index.html" class="navbar__links">Index</a>
+            <a href="index.html" class="navbar__links">Home</a>
           </li>
           <li class="navbar__item">
             <a href="topic.html" class="navbar__links">Topic</a>
